# MyMoney

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  test.spec
.run/: All checks.run.xml  Format.run.xml  flet.run.xml  main.run.xml  pre-commit.run.xml  pytest.run.xml
console_view/: __init__.py  application.py
console_view/command_handler/: __init__.py  handle.py
console_view/data/: __init__.py  database_view.py
console_view/input/: __init__.py  console_input.py
console_view/test/: test_accounts.json  test_command_handle.py  test_data.py  test_input.py  test_transactions.json
console_view/testing/: test_accounts.json  test_data.py
console_view/view/: __init__.py  viewer.py
core/: __init__.py  account.py  exchange.py  main.py  money.py  planned_transaction.py  resource.py  storage.py  test.py  transaction.py
core/test/: test_account.py  test_bank.py  test_money.py  test_transaction.py
core/testing/: test_account.py  test_bank.py  test_money.py  test_transaction.py
core/utils/: __init__.py  make_function_call.py
database/: __init__.py  abstract_base.py  json_base.py  none_base.py  server_base.py  sql_base.py
database/test/: test_data.json  test_database.db  test_json_base.py  test_sql_base.py
dataview/: __init__.py  database_view.py
dataview/test/: test_accounts.json  test_data.py  test_resources.json  test_transactions.json
pc_application/: __init__.py  application.py  authorization_screen.py  navigation_bar.py  planned_transactions_screen.py  screen.py  storages_screen.py  storages_view.py  test.py  transactions_screen.py  transactions_view.py
pc_application/kv/: mymoney.kv
