[project]
requires-python = ">= 3.12"

[tool.ruff]
# Поддержка версии Python
target-version = "py312"

# Основные настройки
line-length = 120 # Максимальная длина строки для кода
indent-width = 4 # Ширина отступа

# Каталоги, которые следует учитывать при разрешении импорта из first/third-party источников
src = ["src"]

# Настройки линтера
[lint]
# Нестабильные и находящиеся в предварительной версии правила
preview = true
# Правила, которые должен применять линтер
select = [
    "UP",   # pyupgrade
    "I",    # isort
    "E",    # flake8-errors
    "W",    # flake8-warnings
    "F",    # flake8-pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
    "T10",  # flake8-debugger
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate
    "FURB", # refurb
]
# Игнорирование конкретных предупреждений линтера
ignore = [
    "C408",  # Ненужный вызов dict, list и т.д.
    "RUF001", # Игнорирование похожих символов с разными ASCII
    "RUF002", # Игнорирование похожих символов с разными ASCII
    "RUF003", # Игнорирование похожих символов с разными ASCII
    "S110",  # try-except-pass
]
# Исключение директорий и файлов из линтинга
exclude = [
    "src/tests/**",
]
# Ошибки, которые могут быть исправлены автоматически
fixable = [
    "I", # cортировка испортов
]

# Настройки форматтера
[format]
quote-style = "double" # 'single' для одинарных, "double" для двойных кавычек
indent-style = "space"

# Дополнительные настройки для плагинов
[lint.flake8-bandit]
check-typed-exception = true # Проверка типизированных исключений
